--- a/lab5_mahidernegash.html
+++ b/lab5_mahidernegash.html
@@ -1,3 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lab 5 - Your Full Name</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+        header {
+            text-align: center;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            margin-bottom: 20px;
+        }
+        main {
+            text-align: center;
+        }
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 0.9em;
+            color: #555;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to Lab 5</h1>
+        <p>Created by: Mahider Negash </p>
+    </header>
+    <main>
+        <h2>HTML Tester Content</h2>
+        <p>This is a simple test page for Lab 5.</p>
+        <p>Feel free to edit and add more content!</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 Mahider Negash. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+
 # Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
